# EdgeHub

./: .gitignore  README.md  main.cpp  toolchain_path.cmake
doc/: design.md  epoll-principle.md  problems-and-solutions.md
doc/review/: 2026-05-31-phase3-code-review.md  code-review-2025-05-31.md  phase3-code-audit.md
docs/: code-review-2026-05-30.md
docs/develop/: phase2-fixes-summary.md  review-summary-2026-05-30.md
docs/review/: 2026-05-31-phase2-code-review.md  2026-05-31-phase2-waveforms-code-review.md  2026-05-31-phase2-waveforms-review.md  code-audit-2026-05-30.md  code-review-phase3.md  codebase-audit-2026-05-30.md  design-vs-impl-2026-05-30.md  implementation-review.md  phase2-code-audit-2026-05-31.md  phase2-waveform-code-review.md
docs/superpowers/specs/: 2026-05-30-edgehub-design.md  2026-05-31-phase2-device-detail-waveforms.md  2026-05-31-phase3-storage-command.md
include/: commands.hpp  epoll.hpp  shell.hpp  uart1.hpp
raspberry_pi/: CMakeLists.txt  build.sh  main.cpp
raspberry_pi/include/: board_channel.hpp  cmd_mgr.hpp  conn_mgr.hpp  epoll.hpp  frame.hpp  frame_parser.hpp  msg_router.hpp  rate_limiter.hpp  storage.hpp  tcp_acceptor.hpp  time_util.hpp  ws_server.hpp
raspberry_pi/src/: board_channel.cpp  cmd_mgr.cpp  conn_mgr.cpp  epoll.cpp  frame.cpp  frame_parser.cpp  msg_router.cpp  rate_limiter.cpp  storage.cpp  tcp_acceptor.cpp  ws_server.cpp
scripts/: plot_log.py
src/: commands.cpp  epoll.cpp  shell.cpp  uart1.cpp
windows/: build.py  requirements.txt
windows/app/: main.py  storage.py
windows/app/api/: server.py  ws_client.py
windows/app/backend/: dispatcher.py  models.py  parser.py  tcp_client.py
windows/app/ui/: ai_tuning_page.py  connect_page.py  dashboard_page.py  main_window.py
windows/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
windows/tools/: simulate_board.py  test_core.py
(+26 files in other folders)
